// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function captures a bucket 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + event.name);
        // TODO: fix this
        await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a bucket 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Bucket_C17636E5\\": {},
      \\"main_Function_Bucket_DD1CA647\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"main_Bucket_PublicAccessBlock_4293C31C\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"main_Bucket_Encryption_8ACA3414\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          return { greeting: \\"Hello, \\" + event.name + \\"!\\" };
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 2`] = `
"const $cap = {};
$cap[\\"function\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME__Function1\\"]);
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          const data = await $cap.function.invoke(JSON.stringify({ name: \\"world\\" }));
          console.log(\\"Greeting: \\" + data.value().greeting);
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function1_IamRole_23EDCEB9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"main_Function2_IamRole_F741B6E9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function1_IamRolePolicy_3F0B25A8\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.name}\\"
      },
      \\"main_Function2_IamRolePolicy_19FE0FD0\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"lambda:InvokeFunction\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_lambda_function.main_Function1_51222EE2.arn}\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function1_IamRolePolicyAttachment_DA2F5633\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.name}\\"
      },
      \\"main_Function2_IamRolePolicyAttachment_4A80759F\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function1_51222EE2\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function1_Bucket_0FA24B61.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function1_S3Object_7DA21701.key}\\"
      },
      \\"main_Function2_1C6E410D\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"FUNCTION_NAME__Function1\\": \\"\${aws_lambda_function.main_Function1_51222EE2.arn}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function2_Bucket_6127E18E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function2_S3Object_1C58C8ED.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function1_Bucket_0FA24B61\\": {},
      \\"main_Function2_Bucket_6127E18E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function1_S3Object_7DA21701\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function1_Bucket_0FA24B61.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"main_Function2_S3Object_1C58C8ED\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function2_Bucket_6127E18E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a queue 1`] = `
"const $cap = {};
$cap[\\"queue\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/queue.inflight.ts\\")).QueueClient(process.env[\\"QUEUE_URL__Queue\\"]);
async function $proc($cap) {
          await $cap.queue.push(JSON.stringify({ name: \\"Alice\\" }));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a queue 2`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Received \\" + event.name);
        }
async function $sqsEventWrapper($cap, event) {
  for (const record of event.Records ?? []) {
    await $proc($cap, record.body);
  }
}
exports.handler = async function(event) {
  return await $sqsEventWrapper($cap, event);
};"
`;

exports[`function captures a queue 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"main_Queue_OnMessagecbf6dee05a035c28_IamRole_79985A81\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:SendMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.main_Queue_72A36BF0.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      },
      \\"main_Queue_OnMessagecbf6dee05a035c28_IamRolePolicy_C0E80632\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.main_Queue_72A36BF0.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Queue_OnMessagecbf6dee05a035c28_IamRole_79985A81.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      },
      \\"main_Queue_OnMessagecbf6dee05a035c28_IamRolePolicyAttachment_4E6871CF\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Queue_OnMessagecbf6dee05a035c28_IamRole_79985A81.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"main_Queue_EventSourceMapping_EA95712A\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.main_Queue_72A36BF0.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.main_Queue_OnMessagecbf6dee05a035c28_11346663.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"QUEUE_URL__Queue\\": \\"\${aws_sqs_queue.main_Queue_72A36BF0.url}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      },
      \\"main_Queue_OnMessagecbf6dee05a035c28_11346663\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"OnMessage-cbf6dee05a035c28\\"
          }
        },
        \\"function_name\\": \\"OnMessage-cbf6dee05a035c28\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Queue_OnMessagecbf6dee05a035c28_IamRole_79985A81.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Queue_OnMessagecbf6dee05a035c28_Bucket_1A89CECC.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Queue_OnMessagecbf6dee05a035c28_S3Object_BA67452B.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function_Bucket_DD1CA647\\": {},
      \\"main_Queue_OnMessagecbf6dee05a035c28_Bucket_1A89CECC\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"main_Queue_OnMessagecbf6dee05a035c28_S3Object_BA67452B\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Queue_OnMessagecbf6dee05a035c28_Bucket_1A89CECC.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"main_Queue_72A36BF0\\": {}
    }
  }
}"
`;

exports[`function captures primitive values 1`] = `
"const $cap = {};
$cap[\\"num\\"] = 5;
$cap[\\"string\\"] = \\"world\\";
$cap[\\"bool\\"] = true;
$cap[\\"nothing\\"] = null;
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + $cap.string);
        console.log(\\"My favorite number is \\" + $cap.num);
        console.log(\\"Is it raining? \\" + $cap.bool);
        console.log($cap.nothing + \\" hypothesis\\");
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures primitive values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function_Bucket_DD1CA647\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures structured values 1`] = `
"const $cap = {};
$cap[\\"map\\"] = {\\"hello\\":\\"world\\",\\"boom\\":{\\"bam\\":123}};
$cap[\\"list\\"] = [1,2,\\"thing\\"];
async function $proc($cap, event) {
          console.log(\\"Map: \\" + JSON.stringify($cap.map));
          console.log(\\"List: \\" + JSON.stringify($cap.list));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures structured values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function_Bucket_DD1CA647\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`two functions reusing the same inflight 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 2`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function1_IamRole_23EDCEB9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"main_Function2_IamRole_F741B6E9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function1_IamRolePolicy_3F0B25A8\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.name}\\"
      },
      \\"main_Function2_IamRolePolicy_19FE0FD0\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.main_Bucket_C17636E5.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function1_IamRolePolicyAttachment_DA2F5633\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.name}\\"
      },
      \\"main_Function2_IamRolePolicyAttachment_4A80759F\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function1_51222EE2\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function1_IamRole_23EDCEB9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function1_Bucket_0FA24B61.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function1_S3Object_7DA21701.key}\\"
      },
      \\"main_Function2_1C6E410D\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function2_IamRole_F741B6E9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function2_Bucket_6127E18E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function2_S3Object_1C58C8ED.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Bucket_C17636E5\\": {},
      \\"main_Function1_Bucket_0FA24B61\\": {},
      \\"main_Function2_Bucket_6127E18E\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"main_Bucket_PublicAccessBlock_4293C31C\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"main_Bucket_Encryption_8ACA3414\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Bucket_C17636E5.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"main_Function1_S3Object_7DA21701\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function1_Bucket_0FA24B61.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"main_Function2_S3Object_1C58C8ED\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function2_Bucket_6127E18E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
